--- a/app/i18n/rafaelcg/language_pt_br/pt_BR.csv
+++ b/app/i18n/rafaelcg/language_pt_br/pt_BR.csv
@@ -11707,3 +11707,5 @@ Translate,Traduzir
 "Enter valid SKU key","Digite uma chave SKU válida"
 "Swatch and Admin are the required fields in the each row.","Swatch e Admin são os campos obrigatórios em cada linha."
 "The widget %1 is no longer available. Select a different widget.","O widget %1 não está mais disponível. Selecione um widget diferente."
+"Endereço: Line 1","Endereço"
+"Endereço: Line 2","Número"
